[package]
name = "qwkvg"
version = "0.1.0"
authors = ["piaoger"]

[dependencies]
arrayvec = "*"
lyon_geom = "*"
lyon_path = "*"
lyon_svg = "*"
serde = "*"
serde_derive = "*"
geo = "*"
pathfinding = "0.8"
svg = "0.5.10"
#dxf = "0.3.0"
libc = "*"

[dependencies.dxf]
git = "https://github.com/IxMilia/dxf-rs.git"


[[bin]]
name = "qwkvg"
doc = false
